@@ -1,3 +1,7 @@
+2024-02-25  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl.c (pkl_resolve_module): Handle failure of `asprintf'.
+
 2024-02-25  Bruno Haible  <bruno@clisp.org>
 
 	libpoke: Fix compiler warnings re [v]asprintf on AIX (regr. 2024-02-23).
